--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.ts",
     "clean": "rm -rf ./dist",
-    "test": "jest",
+    "test": "jest --watchAll --detectOpenHandles",
     "build": "tsc",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
