feat: add linting

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rm -rf ./dist",
     "test": "jest --watchAll --detectOpenHandles",
     "build": "tsc",
+    "lint": "eslint . --ext .ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
